Testing fix for text visibility issues on schedule dropdown

--- a/static/css/schedule.css
+++ b/static/css/schedule.css
@@ -306,6 +306,11 @@ textarea {
     border: black;
 }
 
+select option {
+    background-color: white;
+    color: black;
+}
+
 .input-select:hover {
     background-color: var(--custom-green);
     transition: 0.1s ease-in-out;
